Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12616

Unicode escaped characters get replaced with unencoded when copied and pasted

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • None
    • Qt Creator 3.1.1, Qt Creator 3.1.2, Qt Creator 3.2.0-beta1, Qt Creator 3.3.0-beta1
    • Quick Designer
    • None

      1. Create any QML with a string property, like a Text{}
      2. Insert with any escaped UTF character in the string on the code view, say "\uf078"
      3. Copy and paste it on the Designer.
      4. It's UTF character will be unescaped and replaced with a possibly non printable character, making the code less readable.

      Expected behavior: To copy and paste "as is", if it's encoded then encoded; if explicit then explicit.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thohartm Thomas Hartmann
            desert Ariel Molina R.
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes