QmlDesigner: Write single non ASCII chars as escaped unicode

We do not know if the string was escaped or not in the model.
But this heuristic at least improves the issue
and single characters are escaped.

Task-number: QTCREATORBUG-12616
Change-Id: I3dcc251ce111ab3ee377a17876e2cdb64162d6e8
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>